docs/stylesheets/extra.css
/* ... */
[dir=rtl] .md-footer__link--next {
    text-align: left
}

.md-footer__title {
    flex-grow: 1;
    font-size: .9rem;
    line-height: 2.4rem;
    max-width: calc(100% - 2.4rem);
    padding: 0 1rem;
    position: relative;
    white-space: nowrap;
    margin-bottom: 0rem;
}

.md-footer__button {
    margin: .2rem;
    padding: .4rem
}

.md-footer__direction {
    font-size: .64rem;
    left: 0;
    margin-top: -1rem;
    opacity: .7;
    padding: 0 1rem;
    position: absolute;
    right: 0
}

.md-footer-meta {
    background-color: var(--md-footer-bg-color--dark)
}

.md-footer-meta__inner {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: .2rem
}

.md-footer-meta__inner .md-footer-meta__content {
    /* border-top: 1px solid #99999950; */
    width: 100%;
}

@media screen and (min-width: 45em) {
    .md-footer-meta__inner .md-footer-meta__content {
        display: flex;
        justify-content: space-between;
        padding: 16px 0;
    }
}


html .md-footer-meta.md-typeset a {
    color: var(--md-footer-fg-color--light)
}

html .md-footer-meta.md-typeset a:focus,
html .md-footer-meta.md-typeset a:hover {
    color: var(--md-footer-fg-color)
}

.md-copyright {
    color: var(--md-footer-fg-color--lighter);
    font-size: .64rem;
    margin: auto .6rem 10px;
    padding: .4rem 0;
    width: 100%
}

.md-social a.md-social__link {
    display: inline-flex;
    height: 28px;
    width: 28px;
    align-items: center;
    justify-content: center;
}

.md-social .md-footer-social-and-modern-logo {
    display: flex;
    flex-direction: column;
}

.md-footer-social-and-modern-logo img.modern-logo {
    margin: 0 .4rem;
    padding: .2rem 0 .6rem
}

@media screen and (min-width: 45em) {
    .md-footer-social-and-modern-logo img.modern-logo {
        padding: .6rem 0
    }
}

@media screen and (min-width: 45em) {
    .md-copyright {
        width: auto
    }
}

.md-copyright__highlight {
    color: var(--md-footer-fg-color--light)
}

.md-social {
    margin: 0 .4rem;
    padding: .2rem 0 .6rem
}

@media screen and (min-width: 45em) {
    .md-social {
        padding: .6rem 0
    }
}

.md-social__link {
    display: inline-block;
    height: 1.6rem;
    text-align: center;
    width: 1.6rem
}

.md-social__link:before {
    line-height: 1.9
}

.md-social__link svg {
    fill: currentcolor;
    max-height: .8rem;
    vertical-align: -25%
}

.md-typeset .md-button {
    border: .1rem solid;
    border-radius: .1rem;
    color: var(--md-primary-fg-color);
    cursor: pointer;
    display: inline-block;
    font-weight: 700;
    padding: .625em 2em;
    transition: color 125ms, background-color 125ms, border-color 125ms
}

.md-typeset .md-button--primary {
    background-color: var(--md-primary-fg-color);
    border-color: var(--md-primary-fg-color);
    color: var(--md-primary-bg-color)
}

.md-typeset .md-button:focus,
.md-typeset .md-button:hover {
    background-color: var(--md-accent-fg-color);
    border-color: var(--md-accent-fg-color);
    color: var(--md-accent-bg-color)
}

[dir=ltr] .md-typeset .md-input {
    border-top-left-radius: .1rem
}

[dir=ltr] .md-typeset .md-input,
[dir=rtl] .md-typeset .md-input {
    border-top-right-radius: .1rem
}

[dir=rtl] .md-typeset .md-input {
    border-top-left-radius: .1rem
}

.md-typeset .md-input {
    border-bottom: .1rem solid var(--md-default-fg-color--lighter);
    box-shadow: var(--md-shadow-z1);
    font-size: .8rem;
    height: 1.8rem;
    padding: 0 .6rem;
    transition: border .25s, box-shadow .25s
}

.md-typeset .md-input:focus,
.md-typeset .md-input:hover {
    border-bottom-color: var(--md-accent-fg-color);
    box-shadow: var(--md-shadow-z2)
}

.md-typeset .md-input--stretch {
    width: 100%
}

.md-header {
    background-color: var(--md-primary-fg-color);
    box-shadow: 0 0 .2rem #0000, 0 .2rem .4rem #0000;
    color: var(--md-primary-bg-color);
    display: block;
    left: 0;
    position: -webkit-sticky;
    position: sticky;
    right: 0;
    top: 0;
    z-index: 4
}

@media print {
    .md-header {
        display: none
    }
}

.md-header[hidden] {
    transform: translateY(-100%);
    transition: transform .25s cubic-bezier(.8, 0, .6, 1), box-shadow .25s
}

.md-header--shadow {
    box-shadow: 0 0 .2rem rgba(0, 0, 0, 0.045), 0 .2rem .4rem rgba(0, 0, 0, 0.045);
    transition: transform .25s cubic-bezier(.1, .7, .1, 1), box-shadow .25s
}

.md-header__inner {
    align-items: center;
    display: flex;
    padding: 0 .2rem
}

.md-header__button {
    color: currentcolor;
    cursor: pointer;
    margin: .2rem;
    outline-color: var(--md-accent-fg-color);
    padding: .4rem;
    position: relative;
    transition: opacity .25s;
    vertical-align: middle;
    z-index: 1
}

.md-header__button:hover {
    opacity: .7
}

.md-header__button:not([hidden]) {
    display: inline-block
}

.md-header__button:not(.focus-visible) {
    -webkit-tap-highlight-color: transparent;
    outline: none
}

.md-header__button.md-logo {
    margin: .2rem;
    padding: .4rem
}

@media screen and (max-width: 76.1875em) {
    .md-header__button.md-logo {
        display: none
    }
}

.md-header__button.md-logo img,
.md-header__button.md-logo svg {
    fill: currentcolor;
    display: block;
    height: 1.2rem;
    width: auto
}

@media screen and (min-width: 60em) {
    .md-header__button[for=__search] {
        display: none
    }
}

.no-js .md-header__button[for=__search] {
    display: none
}

[dir=rtl] .md-header__button[for=__search] svg {
    transform: scaleX(-1)
}

@media screen and (min-width: 76.25em) {
    .md-header__button[for=__drawer] {
        display: none
    }
}

.md-header__topic {
    display: flex;
    max-width: 100%;
    position: absolute;
    transition: transform .4s cubic-bezier(.1, .7, .1, 1), opacity .15s;
    white-space: nowrap
}
/* ... */

